<!--
  ~ Create by EggUncle on 17-5-27 上午10:47
  ~ Copyright (c) 2017. All rights reserved
  ~
  ~ Last modified 17-5-23 上午10:20
  ~
  -->

<resources>
    <string name="app_name">图说</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_title">请输入标题</string>
    <string name="input_content">请输入填充的文字</string>
    <string name="my">我的</string>
    <string name="star_ocean">星海</string>
    <string name="delete">删除</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="load">生成中，请稍候...</string>
    <string name="action_generate_img">生成图片</string>
    <string name="action_about">关于</string>
    <string name="project_address">项目地址: https://github.com/EggUncle/TuShuo</string>
    <string name="project_rep">框架</string>
    <string name="glide_rep">glide: https://github.com/bumptech/glide</string>
    <string name="litepal_rep">litepal: https://github.com/LitePalFramework/LitePal#latest-downloads/</string>
    <string name="okhttp_rep">okhttp: https://github.com/square/okhttp</string>
    <string name="okio_rep">okio: https://github.com/square/okio</string>
    <string name="load_txt_1">倘若我心中的山水</string>
    <string name="load_txt_2">你都能看到</string>
    <string name="action_geturl">复制地址</string>
    <string name="background_color">背景颜色 </string>
    <string name="image_size">图片缩放尺寸 </string>
    <string name="txt_size">文字大小 </string>
    <string name="debug_img_color">亮度调整 </string>
    <string name="laboratory">实验性功能</string>
    <string name="laboratory_swtich">实验性开关</string>
    <string name="laboratory_about">
        \t\t\t\t打开实验性开关后，可以自行设定图片转换成页面时的相关参数
        至于最合适的背景颜色、图片缩放尺寸、文字大小和亮度，我自己也在摸索。
        你可以将参数、原图、生成的图片以及机型发在酷安评论区中，一起来找到相对来说更加合适的参数，谢谢~
        \n\n背景颜色：生成页面的背景颜色。（默认为黑色）
        \n\n图片缩放尺寸：将图片进行扩大或缩小，值代表最短的那条边。
        对于尺寸小的图片，放大可以让生成的页面的文字不至于太少导致无法看清原图效果，
        但是这个值如果过大，会使生成的页面文字数量过多和生成的页面文件太大，导致加载时失去响应甚至是程序崩溃。（默认为750）
        \n\n亮度调整：调整生成的页面的文字亮度。
        在默认情况下，背景颜色为黑色，导致页面的显示效果偏暗，将这个值调高可以将文字颜色调亮，但是也有可能导致生成的页面文字颜色异常。
        \n\n ××实验性模式生成的页面暂时不支持上传××

    </string>
    <string name="r">r</string>
    <string name="b">B</string>
    <string name="G">G</string>
    <string name="R">R</string>
    <string name="copy_link">复制链接</string>
    <string name="upload">上传页面</string>
    <string name="had_upload">已经上传过啦</string>
    <string name="has_copy_link">已将页面链接复制到剪贴板</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="retry">重试</string>
</resources>
