<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_m">

        <TextView
            android:id="@+id/tv_imgpath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_color" />

        <TextView
            android:id="@+id/tv_img_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_size" />

        <SeekBar
            android:id="@+id/sb_img_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1800" />

        <TextView
            android:id="@+id/tv_txt_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_size" />

        <SeekBar
            android:id="@+id/sb_txt_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9" />

        <TextView
            android:id="@+id/tv_rgb_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_img_color" />

        <SeekBar
            android:id="@+id/sb_rgb_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50" />

        <ImageView
            android:id="@+id/iv_dialog_img"
            android:layout_width="@dimen/dialog_img_size"
            android:layout_height="@dimen/dialog_img_size"
            android:layout_gravity="center" />


    </LinearLayout>
</ScrollView>